--- a/literature/theory/reference.bib
+++ b/literature/theory/reference.bib
@@ -70,3 +70,17 @@
   keywords = {Hiring, Separations, French labor law},
   abstract = {In this article, we use the structure of French labor law and the data from three linked sources to estimate the costs of hiring, separation and retirement of employees for a representative sample of French establishments matched with a representative sample of their employees. The estimates are computed using data from the Wage Structure Survey (ESS), the Workforce Movement Questionnaire (DMMO), and the Occupational Structure Survey (ESE). We show that the estimated separation costs are increasing and mildly concave functions of the number of exits and include a very large fixed component. Estimated hiring costs are much lower and those associated with short-term contracts are effectively zero. Profit maximizing French firms should adjust employment primarily through hiring changes.}
 }
+@article{DAvHalt90,
+  issn      = {08893365, 15372642},
+  url       = {http://www.jstor.org/stable/3585137},
+  abstract  = {This paper investigates the connection between the heterogeneity of establishment-level employment changes and aggregate fluctuations at business cycle frequencies. Our empirical work exploits a rich data set with approximately 860,000 annual observations and 3.4 million quarterly observations on 160,000 manufacturing establishments to calculate rates of gross job creation, gross job destruction, and their sum, gross job reallocation. Three central messages emerge from the research in this paper: First, establishment-level employment changes exhibit tremendous heterogeneity, even within narrowly defined sectors of the economy. This heterogeneity manifests itself in terms of high rates of gross job creation, destruction, and reallocation. Furthermore, the magnitude of this heterogeneity varies significantly over time; most of the variation is due to time variation in the idiosyncratic component of establishment growth rates, and the variation is significantly countercyclical. Second, our theoretical model of employment reallocation and business cycles is suggestive of how both aggregate and allocative disturbances can drive fluctuations in job creation, job destruction, unemployment, productivity, and output. Third, our empirical analysis of the joint dynamics of job creation and destruction supports the view that allocative disturbances were a major driving force behind movements in job creation, job destruction, job reallocation, and net employment growth in the U.S. manufacturing sector during the 1972 to 1986 period.},
+  author    = {Steven J. Davis and John Haltiwanger},
+  journal   = {NBER Macroeconomics Annual},
+  pages     = {123--168},
+  publisher = {University of Chicago Press},
+  title     = {Gross Job Creation and Destruction: Microeconomic Evidence and Macroeconomic Implications},
+  urldate   = {2024-01-12},
+  volume    = {5},
+  year      = {1990}
+}
+
